fixing git link

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>Assignment Home Page</h1>
+    <li>
+        <a href="https://dashboard.heroku.com/apps/chen-chengyang-webdev">Assignment1</a>
+    </li>
 </body>
 </html>
