--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Assignment Home Page</h1>
     <li>
-        <a href="https://dashboard.heroku.com/apps/chen-chengyang-webdev">Assignment1</a>
+        Assignment1
     </li>
 </body>
 </html>
