--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Assignment Home Page</title>
+    <title>Title</title>
+    <ul>
+        <li><a href="assignemnt1/index.html">Assignemnt 1</a></li>
+        <li><a href="assignemnt2/index.html">Assignemnt 2</a></li>
+    </ul>
 </head>
 <body>
-    <h1>Assignment Home Page</h1>
-    <li>
-        Assignment1
-    </li>
+
 </body>
 </html>
