--- a/public/assignment/assignemnt2/widget/widget-choose.html
+++ b/public/assignment/assignemnt2/widget/widget-choose.html
@@ -39,8 +39,15 @@
      role="main">
     <ul class="list-group nowarp">
         <li class="list-group-item"><a href="widget-heading-edit.html">Header</a> </li>
+        <li class="list-group-item"><a href="">Label</a> </li>
+        <li class="list-group-item"><a href="">HTML</a> </li>
+        <li class="list-group-item"><a href="">TextInput</a> </li>
+        <li class="list-group-item"><a href="">Link</a> </li>
+        <li class="list-group-item"><a href="">Button</a> </li>
         <li class="list-group-item"><a href="widget-image-edit.html">Image</a> </li>
         <li class="list-group-item"><a href="widget-youtube-edit.html">YouTube</a> </li>
+        <li class="list-group-item"><a href="">Data Table</a> </li>
+        <li class="list-group-item"><a href="">Repeater</a> </li>
     </ul>
 </div>
 
