--- a/public/assignment/assignemnt2/widget/widget-list.html
+++ b/public/assignment/assignemnt2/widget/widget-list.html
@@ -61,9 +61,7 @@
     <!--Heading-->
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <a href="widget-heading-edit.html">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a>
+            <span class="glyphicon glyphicon-cog"></span>
             <span class="glyphicon glyphicon-align-justify"></span>
         </div>
         <h1>GIZMODO</h1>
@@ -73,7 +71,7 @@
     <!--widget-1-name-->
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <a href="widget-image-edit.html">
+            <a href="widget-heading-edit.html">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <span class="glyphicon glyphicon-align-justify"></span>
@@ -94,9 +92,7 @@
     <!--widget-1-text-->
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <a href="widget-image-edit.html">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a>
+            <span class="glyphicon glyphicon-cog"></span>
             <span class="glyphicon glyphicon-align-justify"></span>
         </div>
         <p>After a brief tease
@@ -117,7 +113,7 @@
     <!--widget-2-name-->
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <a href="widget-youtube-edit.html">
+            <a href="widget-heading-edit.html">
                 <span class="glyphicon glyphicon-cog"></span>
             </a>
             <span class="glyphicon glyphicon-align-justify"></span>
@@ -144,9 +140,8 @@
     <!--widget-2-text-->
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
-            <a href="widget-youtube-edit.html">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a> <span class="glyphicon glyphicon-align-justify"></span>
+            <span class="glyphicon glyphicon-cog"></span>
+            <span class="glyphicon glyphicon-align-justify"></span>
         </div>
         <p>Youtube text -- After a brief tease
             <a href="http://io9.gizmodo.com/the-first-picture-from-star-trek-discovery-explores-st-1795290281"
