--- a/public/assignment/assignemnt2/user/profile.html
+++ b/public/assignment/assignemnt2/user/profile.html
@@ -83,13 +83,15 @@
 </div>
 
 
-<!--footer-->
-<nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="pull-right">
-        <a href="../index.html"
-           class="navbar-text navbar-link">
-            <span class="glyphicon glyphicon-home"></span>
-        </a>
+<!-- footer -->
+<nav class="navbar navbar-inverse navbar-fixed-bottom">
+    <div class="container-fluid">
+        <div>
+            <ul class="nav navbar-nav list-inline"
+                id="ul-footer">
+                <li><a href="../index.html"><span class="glyphicon glyphicon-home"></span></a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
     </div>
 </nav>
 
