--- a/public/assignment/assignemnt2/website/website-new.html
+++ b/public/assignment/assignemnt2/website/website-new.html
@@ -62,7 +62,7 @@
                         <span class="glyphicon glyphicon-chevron-left"></span>
                     </a>
                     <!--current page-->
-                    <span class="navbar-brand">Edit Website</span>
+                    <span class="navbar-brand">New Website</span>
                     <!--ok button-->
                     <a href="website-list.html"
                        class="  navbar-brand pull-right right-most-padding">
