--- a/public/assignment/assignemnt2/widget/widget-heading-edit.html
+++ b/public/assignment/assignemnt2/widget/widget-heading-edit.html
@@ -53,7 +53,7 @@
 
     <label for="size">Size</label>
     <select id="size" class="form-control">
-        <option>1 (X-Large)</option>
+        <option selected="selected">1 (X-Large)</option>
         <option>2 (Larger)</option>
         <option>3 (Large)</option>
         <option>4 (Medium)</option>
