--- a/public/assignment/assignemnt2/widget/widget-list.html
+++ b/public/assignment/assignemnt2/widget/widget-list.html
@@ -137,13 +137,14 @@
         </div>
 
     </div>
+
     <!--widget-2-text-->
     <div class="wd-widget">
         <div class="wd-widget-toolbar">
             <span class="glyphicon glyphicon-cog"></span>
             <span class="glyphicon glyphicon-align-justify"></span>
         </div>
-        <p>Youtube text -- After a brief tease
+        <p> After a brief tease
             <a href="http://io9.gizmodo.com/the-first-picture-from-star-trek-discovery-explores-st-1795290281"
                rel="nofollow">this morning</a>, CBS have just revealed our first full look at <em>Star Trek:
                                                                                                   Discovery</em>, giving
@@ -156,6 +157,8 @@
            Isaacs), from the perspective of its First Officer, Michael Burnham (Sonequa Martin Green). <br></p>
 
     </div>
+
+
 </div>
 
 <!-- footer -->
@@ -171,6 +174,15 @@
     </div>
 </nav>
 
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+<!--<script src="../vendor/bootstrap/dist/js/bootstrap.js"></script>-->
 
 </body>
 </html>
