--- a/public/assignment/assignemnt2/website/website-list.html
+++ b/public/assignment/assignemnt2/website/website-list.html
@@ -13,7 +13,7 @@
 
     <!--&lt;!&ndash; Bootstrap core CSS &ndash;&gt;-->
     <!--<link href="../vendor/bootstrap/dist/css/bootstrap.css"-->
-          <!--rel="stylesheet">-->
+    <!--rel="stylesheet">-->
 
     <!-- Custom styles for this template -->
     <link href="../css/style.css"
@@ -52,7 +52,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="website-list.html">Website-list</a></li>
                 <li><a href="website-new.html"
-                class="right-most-padding"><span class="glyphicon glyphicon-plus">&emsp;Add</span> </a></li>
+                       class="right-most-padding"><span class="glyphicon glyphicon-plus">&emsp;Add</span> </a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -157,15 +157,15 @@
 </nav>
 
 
-
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="../vendor/bootstrap/dist/js/bootstrap.js"></script>
-<script src="../../assets/js/docs.min.js"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+<!--<script src="../vendor/bootstrap/dist/js/bootstrap.js"></script>-->
+
 </body>
 </html>
