--- a/public/assignment/assignemnt2/widget/widget-image-edit.html
+++ b/public/assignment/assignemnt2/widget/widget-image-edit.html
@@ -59,7 +59,7 @@
 
     <label for="width">Width</label>
     <select id="width" class="form-control">
-        <option>100%</option>
+        <option selected="selected">100%</option>
         <option>75%</option>
         <option>50%</option>
         <option>25%</option>
