html and text done

--- a/public/assignment/assignment5/index.html
+++ b/public/assignment/assignment5/index.html
@@ -78,6 +78,17 @@
     <!--<link href="vendor/bootstrap/dist/css/bootstrap.css"-->
     <!--rel="stylesheet">-->
 
+
+    <!--textAngular-->
+    <script src="vendor/textangular/dist/textAngular-rangy.min.js"></script>
+    <script src="vendor/textangular/dist/textAngular-sanitize.min.js"></script>
+    <script src="vendor/textangular/dist/textAngular.min.js"></script>
+    <link rel="stylesheet" href="css/textAngular.css">
+
+    <!--font-awesome-->
+    <script src="https://use.fontawesome.com/464c737455.js"></script>
+
+
     <!--jqueryUI css-->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <!-- Custom styles for this template -->
