assignemnt6 set uo

--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -10,6 +10,7 @@
         <li><a href="assignemnt3/index.html">Assignemnt 3</a></li>
         <li><a href="assignment4/index.html">Assignemnt 4</a></li>
         <li><a href="assignment5/index.html">Assignemnt 5</a></li>
+        <li><a href="assignment6/index.html">Assignemnt 6gi</a></li>
     </ul>
 </head>
 <body>
