--- a/public/assignment/assignment6/index.html
+++ b/public/assignment/assignment6/index.html
@@ -2,9 +2,8 @@
 <html lang="en" ng-app="WebAppMaker">
 <head>
     <meta charset="UTF-8">
-    <!--<meta name="viewport"-->
-          <!--content="width=device-width, initial-scale=1 user-scalable=no">-->
-    <meta http-equiv="Content-Security-Policy" content="default-src gap://ready file://* *; style-src 'self' http://chen-chengyang-webdev.herokuapp.com/ https://chen-chengyang-webdev.herokuapp.com/ 'unsafe-inline'; script-src 'self' http://chen-chengyang-webdev.herokuapp.com/ https://chen-chengyang-webdev.herokuapp.com/ 'unsafe-inline' 'unsafe-eval'">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1 user-scalable=no">
 
     <title>Choose widget</title>
 
