testing facebook login

--- a/public/assignment/assignment6/index.html
+++ b/public/assignment/assignment6/index.html
@@ -18,7 +18,7 @@
     <script src="app.js"></script>
     <script src="config.js"></script>
     <script src="directives/wbdv-sortable.js"></script>
-
+    <link rel="manifest" href="/manifest.json">
 
     <!--<script src="directive.js"></script>-->
     <!--<script src="directives/wbdv-sortable.js"></script>-->
