fixing home page and highlight require field

--- a/public/assignment/assignment6/index.html
+++ b/public/assignment/assignment6/index.html
@@ -31,6 +31,8 @@
     <script src="services/widget.service.client.js"></script>
 
     <!--loading controller-->
+    <!--home controller-->
+    <script src="views/main/controllers/home.controller.client.js"></script>
     <!--user controller-->
     <script src="views/user/controller/login.controller.client.js"></script>
     <script src="views/user/controller/profile.controller.client.js"></script>
