--- a/finalProject/apiTest/googleMapSearch.html
+++ b/finalProject/apiTest/googleMapSearch.html
@@ -1,39 +1,39 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-    <!--<meta charset="UTF-8">-->
-    <!--<title>Title</title>-->
-    <!--&lt;!&ndash; Bootstrap core CSS &ndash;&gt;-->
-    <!--<link rel="stylesheet"-->
-          <!--href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
-          <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"-->
-          <!--crossorigin="anonymous">-->
-<!--</head>-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+</head>
 
-<!--<body>-->
+<body>
 
-<!--<div class="container-fluid ">-->
-    <!--<div class="input-group">-->
-        <!--<input ng-model="searchText"-->
-               <!--type="text"-->
-               <!--class="form-control">-->
-        <!--<span class="input-group-btn">-->
-           <!--<a ng-click="model.searchPhotos(searchText)"-->
-              <!--class="btn btn-default" type="button">-->
-               <!--<span class="glyphicon glyphicon-search"></span>-->
-           <!--</a>-->
-       <!--</span>-->
-    <!--</div>-->
+<div class="container-fluid ">
+    <div class="input-group">
+        <input ng-model="searchText"
+               type="text"
+               class="form-control">
+        <span class="input-group-btn">
+           <a ng-click="model.searchPhotos(searchText)"
+              class="btn btn-default" type="button">
+               <span class="glyphicon glyphicon-search"></span>
+           </a>
+       </span>
+    </div>
 
-    <!--<div class="row">-->
-        <!--<div class="clearfix col-sm-12 col-md-2" ng-repeat="photo in model.photos.photo">-->
-            <!--<img style="width: 100%"-->
-                 <!--ng-click="model.selectPhoto(photo)"-->
-                 <!--ng-src="https://farm{{photo.farm}}.staticflickr.com/{{photo.server}}/{{photo.id}}_{{photo.secret}}_z.jpg"/>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
+    <div class="row">
+        <div class="clearfix col-sm-12 col-md-2" ng-repeat="photo in model.photos.photo">
+            <img style="width: 100%"
+                 ng-click="model.selectPhoto(photo)"
+                 ng-src="https://farm{{photo.farm}}.staticflickr.com/{{photo.server}}/{{photo.id}}_{{photo.secret}}_z.jpg"/>
+        </div>
+    </div>
+</div>
 
 
-<!--</body>-->
-<!--</html>-->
+</body>
+</html>
