--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="css/grayscale.min.css" rel="stylesheet">
+    <link href="css/grayscale.css" rel="stylesheet">
 
     <!-- Temporary navbar container fix -->
     <style>
@@ -84,8 +84,9 @@
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 offset-md-2">
+            <div class="col-lg-8 offset-md-2 ">
                 <h2>Who Am I </h2>
+                <img src="img/profile.jpg" class="my-img-circle">
                 <p>I am current master student of College of Computer Science In the Northeastern University Boston Campus</p>
             </div>
         </div>
