--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- Bootstrap core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-    <ul>
-        <li><a href="assignemnt1/index.html">Assignemnt 1</a></li>
-        <li><a href="assignemnt2/index.html">Assignemnt 2</a></li>
-        <li><a href="assignemnt3/index.html">Assignemnt 3</a></li>
-        <li><a href="assignment4/index.html">Assignemnt 4</a></li>
-        <li><a href="assignment5/index.html">Assignemnt 5</a></li>
-        <li><a href="assignment6/index.html">Assignemnt 6</a></li>
-    </ul>
+
 </head>
 <body>
 
+<div class="container-fluid">
+<ul class="list-group">
+    <li class="list-group-item active">Assignment</li>
+    <li class="list-group-item" ><a href="assignemnt1/index.html">Assignemnt 1</a></li>
+    <li class="list-group-item"><a href="assignemnt2/index.html">Assignemnt 2</a></li>
+    <li class="list-group-item"><a href="assignemnt3/index.html">Assignemnt 3</a></li>
+    <li class="list-group-item"> <a href="assignment4/index.html">Assignemnt 4</a></li>
+    <li class="list-group-item"><a href="assignment5/index.html">Assignemnt 5</a></li>
+    <li class="list-group-item"><a href="assignment6/index.html">Assignemnt 6</a></li>
+</ul>
+</div>
 </body>
 </html>
