--- a/public/index.html
+++ b/public/index.html
@@ -97,8 +97,15 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 offset-md-2">
-                    <h2>Course Assignments for CS5610 </h2>
-                    <a href="assignment/index.html" class="btn btn-default btn-lg">Visit assignments Page</a>
+                    <h2>Assignments for CS5610 </h2>
+                    <ul class="list-inline banner-social-buttons">
+                        <li class="list-inline-item">
+                            <a href="https://github.com/ccyycc/chen-chengyang-webdev" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="assignment/index.html" class="btn btn-default btn-lg"><i class="fa fa-caret-square-o-right"></i> <span class="network-name"> Webpage</span></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -136,10 +143,6 @@
                     <br>chen.chengy@husky.neu.edu
                 </p>
                 <ul class="list-inline banner-social-buttons">
-                    <li class="list-inline-item">
-                        <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-
                 </ul>
             </div>
         </div>
